--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-/node_modules
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+package-lock.json
+
+# compiled output
+
+
+# dependencies
+node_modules
+
+#env
+.env
+
+#logs
+logs
+.vercel
